Replace sommaireprogrammesimage.jpg with image.png

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  
 <body>
  
-<img src="sommaireprogrammesimage.jpg" usemap="#map">
+<img src="image.png" usemap="#map">
  
 <map name="map">
   <!-- Bouton 1 -->
