Update image map areas with new links and coordinates

--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
  
 <map name="map">
   <!-- Bouton 1 -->
-  <area shape="rect" coords="200,211,289,305" href="https://ent2d.ac-bordeaux.fr/disciplines/mathematiques/?p=11337&preview=true" target="_blank">
+  <area shape="rect" coords="108,133,297,205" href="https://ent2d.ac-bordeaux.fr/disciplines/mathematiques/programmes-et-docs-daccompagnement-college-cycle3/" target="_blank">
   
   <!-- Bouton 2 -->
-  <area shape="rect" coords="39,387,294,582" href="https://ent2d.ac-bordeaux.fr/disciplines/mathematiques/?p=11429&preview=true" target="_blank">
+  <area shape="rect" coords="109,373,296,443" href="https://ent2d.ac-bordeaux.fr/disciplines/mathematiques/programmes-et-docs-daccompagnement-college-cycle4/" target="_blank">
   
   <!-- Bouton 3 -->
-  <area shape="rect" coords="496,346,746,438" href="https://ent2d.ac-bordeaux.fr/disciplines/mathematiques/?p=11882&preview=true" target="_blank">
+  <area shape="rect" coords="464,375,653,445" href="https://ent2d.ac-bordeaux.fr/disciplines/mathematiques/programmes-et-docs-daccompagnement-lycee/" target="_blank">
+  
+  <!-- Bouton 4 -->
+  <area shape="rect" coords="533,254,719,324" href="https://ent2d.ac-bordeaux.fr/disciplines/mathematiques/programmes-et-documents-daccompagnement-snt-nsi/" target="_blank">
+  
+  <!-- Bouton 5 -->
+  <area shape="rect" coords="459,128,657,205" href="https://ent2d.ac-bordeaux.fr/disciplines/mathematiques/programmes-et-docs-daccompagnement-bts/" target="_blank">
 </map>
  
 </body>
