Replace image.jpg with image.png in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p class="p1"><span class="s1">&lt;body&gt;</span></p>
 <p class="p1"><span class="s1"><br>
 </span></p>
-<p class="p1"><span class="s1">&lt;img src=« image.jpg" usemap="#map"&gt;</span></p>
+<p class="p1"><span class="s1">&lt;img src=« image.png" usemap="#map"&gt;</span></p>
 <p class="p1"><span class="s1"><br>
 </span></p>
 <p class="p1"><span class="s1">&lt;map name="map"&gt;</span></p>
